<resources>
    <string name="app_name">Magical</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="mobileNumber">Enter Mobile Number</string>
    <string name="sign_in">Create Account</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nameErrorMessage">Please Enter Name</string>
    <string name="emailErrorMessage">Please Enter Email</string>
    <string name="mobileErrorMessage">Please Enter Mobile Number</string>
    <string name="passwordErrorMessage">Please Enter Password</string>
    <string name="confirmPasswordError">Please Enter Confirm Password</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
